--- a/client/html/structure_templates.html
+++ b/client/html/structure_templates.html
@@ -1,28 +1,27 @@
-<template name="mdlBody">
-    <body>
-        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        
-        </div>
-    </body>
+<template name="blogTemplate">
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+        {{>yield "header"}}
+        {{>yield "main"}}
+    </div>
 </template>
 
 
 <template name="MainHeader">
-      <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-          <!-- Title -->
-          <span class="mdl-layout-title">Leandro Bittencourt</span>
-          <!-- Add spacer, to align navigation to the right -->
-          <div class="mdl-layout-spacer"></div>
-          <!-- Navigation. We hide it in small screens. -->
-          <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-          </nav>
-        </div>
-      </header>
+        <header class="mdl-layout__header">
+            <div class="mdl-layout__header-row">
+              <!-- Title -->
+              <span class="mdl-layout-title">Leandro Bittencourt</span>
+              <!-- Add spacer, to align navigation to the right -->
+              <div class="mdl-layout-spacer"></div>
+              <!-- Navigation. We hide it in small screens. -->
+              <nav class="mdl-navigation mdl-layout--large-screen-only">
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+              </nav>
+            </div>
+        </header>
       <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">Menu</span>
         <nav class="mdl-navigation">
@@ -32,6 +31,6 @@
           <a class="mdl-navigation__link" href="">Link</a>
         </nav>
       </div>
-    </template>
+</template>
 
  
