--- a/client/html/homeTemplates.html
+++ b/client/html/homeTemplates.html
@@ -33,4 +33,38 @@
       </div>
 </template>
 
+<template name="post">
+    <div class="demo-card-wide mdl-card mdl-shadow--2dp post">
+  <div class="mdl-card__title">
+    <h2 class="mdl-card__title-text">Welcome</h2>
+  </div>
+    <div class="mdl-card__media">
+    <img src="/Adventure_Time_-_Title_card.png" width="100%" height="100%" border="0" alt="">
+    </div>
+  <div class="mdl-card__supporting-text">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    Mauris sagittis pellentesque lacus eleifend lacinia...
+  </div>
+  <div class="mdl-card__actions mdl-card--border">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="/client/html/post.html">
+      Get Started
+    </a>
+  </div>
+  <div class="mdl-card__menu">
+    <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+      <i class="material-icons">share</i>
+    </button>
+  </div>
+</div>
+</template>
+
+<template name="content">
+    <main class="mdl-layout__content">
+        <div class="page-content">
+            <div class="mdl-grid">
+                {{>post}}  
+            </div>
+        </div>
+    </main>
+</template>
  
